# cxxduals

./: .gitignore  CMakeLists.txt  README.md
cxxduals/: dual
examples/: differentiation.cpp  printing.cpp
tests/: CMakeLists.txt  test1.cpp  test2.cpp  test_helpers.h
tests/googletest/googletest/include/gtest/: gtest-param-test.h  gtest-printers.h  gtest-spi.h  gtest-typed-test.h  gtest.h
tests/googletest/googletest/include/gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-internal.h  gtest-linked_ptr.h  gtest-param-util-generated.h  gtest-param-util.h  gtest-port.h  gtest-string.h  gtest-type-util.h
tests/googletest/googletest/src/: gtest-all.cc  gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest-test-part.cc  gtest-typed-test.cc  gtest.cc
